--- a/.env.example
+++ b/.env.example
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.sendgrid.net
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=brunokaue
-MAIL_PASSWORD=32f4737625a7b31afd3cefa5c571232e
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="naoresponda@kreativesdenken.com.br”
-MAIL_FROM_NAME=“Nome da empresa“
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
