--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^7.0",
         "intervention/image": "^2.5",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-      "ext-json": "*"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
